--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,26 @@
 body {
-  background: #171717;
-  color: #fff;
+  background: black;
+  
+  
+} & .bloqueGeneral {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+} & .box {
+  display: flex;
+  background: white;
+  width: 100px;
+  height: 100px;
+  align-items: center;
+  justify-content: center;
+  transition: 1s;
+  &.on {
+    background: gold;
+    box-shadow: 0 0 20px #000c inset,
+                0 0 30px gold;
+    
+  }
 }
+
