--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,17 @@ body {
   background: black;
   
   
-} & .bloqueGeneral {
+}
+
+& .bloqueGeneral {
   display: flex;
   width: 100%;
   height: 100vh;
   align-items: center;
   justify-content: center;
-} & .box {
+}
+
+& .box {
   display: flex;
   background: white;
   width: 100px;
@@ -16,11 +20,18 @@ body {
   align-items: center;
   justify-content: center;
   transition: 1s;
+
   &.on {
     background: gold;
     box-shadow: 0 0 20px #000c inset,
-                0 0 30px gold;
+      0 0 30px gold;
     
   }
 }
 
+.mensaje {
+  text-align: center;
+  margin-top: 20px;
+  font-family: sans-serif;
+  transition: all 0.5s ease;
+}
